[package]
name = "derive_util"
version = "0.7.0"
authors = ["Robert Escriva <robert@rescrv.net>"]
edition = { workspace = true }
description = "derive_util provides tools for derive macros."
license = "Apache-2.0"
repository = "https://github.com/rescrv/blue"

[dependencies]
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }