[package]
name = "gremlins"
version = "0.1.0"
authors = ["Robert Escriva <robert@rescrv.net>"]
edition = "2021"
description = "Gremlins provides a tool for instrumenting rpc_pb services."
license = "Apache-2.0"

[dependencies]
getopts = "0.2"
rand = "0.7"
rustyline = "11.0"

arrrg = { path = "../arrrg", version = "0.1" }
arrrg_derive = { path = "../arrrg_derive", version = "0.1" }
biometrics = { path = "../biometrics", version = "0.3" }
buffertk = { path = "../buffertk", version = "0.3" }
busybee = { path = "../busybee", version = "0.2" }
guacamole = { path = "../guacamole", version = "0.2.0" }
indicio = { path = "../indicio", version = "0.1.0" }
one_two_eight = { path = "../one_two_eight", version = "0.2" }
prototk = { path = "../prototk", version = "0.3" }
prototk_derive = { path = "../prototk_derive", version = "0.3" }
rpc_pb = { path = "../rpc_pb", version = "0.2" }
split_channel = { path = "../split_channel", version = "0.2" }
texttale = { path = "../texttale", version = "0.1.0" }
utilz = { path = "../utilz", version = "0.1" }
zerror_core = { path = "../zerror_core", version = "0.2" }
