[package]
name = "guacamole"
version = "0.15.0"
authors = ["Robert Escriva <robert@rescrv.net>"]
edition = { workspace = true }
description = "Guacamole provides a linearly-seekable random number generator."
license = "Apache-2.0"
repository = "https://github.com/rescrv/blue"

[features]
default = ["binaries"]

binaries = ["dep:arrrg", "dep:arrrg_derive", "dep:getopts"]

[dependencies]
getopts = { workspace = true, optional = true }

arrrg = { workspace = true, optional = true }
arrrg_derive = { workspace = true, optional = true }

[[bin]]
name = "guacamole"
path = "src/bin/guacamole.rs"
required-features=["binaries"]

[[bin]]
name = "zipf"
path = "src/bin/zipf.rs"
required-features=["binaries"]
