[package]
name = "handled"
version = "0.5.0"
authors = ["Robert Escriva <robert@rescrv.net>"]
edition = "2021"
description = "handled is an error handling library"
license = "Apache-2.0"
repository = "https://github.com/rescrv/blue"

[features]
default = ["binaries"]

binaries = []

[dependencies]
biometrics = { path = "../biometrics", version = "0.12" }

[dev-dependencies]
guacamole = { path = "../guacamole" }
