[package]
name = "handled"
version = "0.9.0"
authors = ["Robert Escriva <robert@rescrv.net>"]
edition = { workspace = true }
description = "handled is an error handling library"
license = "Apache-2.0"
repository = "https://github.com/rescrv/blue"

[features]
default = ["binaries"]

binaries = []

[dependencies]

[dev-dependencies]
guacamole = { workspace = true }

[[example]]
name = "generror"
path = "examples/generror.rs"
required-features=["binaries"]
