[package]
name = "hey_listen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7"

biometrics = { path = "../biometrics" }
clue = { path = "../clue" }
id = { path = "../id" }
prototk = { path = "../prototk" }
