[package]
name = "hey_listen"
version = "0.1.0"
authors = ["Robert Escriva <robert@rescrv.net>"]
edition = "2021"

[dependencies]
rand = "0.7"

biometrics = { path = "../biometrics", version = "0.1.0" }
id = { path = "../id" }
indicio = { path = "../indicio" }
prototk = { path = "../prototk", version = "0.1.0" }
