[package]
name = "indicio"
version = "0.2.0"
authors = ["Robert Escriva <robert@rescrv.net>"]
edition = "2021"
description = "Indicio provides a framework for emitting clues that may be used for debugging."
license = "Apache-2.0"
repository = "https://github.com/rescrv/blue"

[features]
default = ["binaries"]

binaries = []

[dependencies]
nom = "7.1"

biometrics = { path = "../biometrics", version = "0.6" }
buffertk = { path = "../buffertk", version = "0.6" }
prototk = { path = "../prototk", version = "0.5" }
prototk_derive = { path = "../prototk_derive", version = "0.5" }
tatl = { path = "../tatl", version = "0.4" }

[[example]]
name = "macros"
path = "examples/macros.rs"
required-features=["binaries"]
