[package]
name = "indicio"
version = "0.6.0"
authors = ["Robert Escriva <robert@rescrv.net>"]
edition = "2021"
description = "Indicio provides a framework for emitting clues that may be used for debugging."
license = "Apache-2.0"
repository = "https://github.com/rescrv/blue"

[features]
default = ["binaries", "prototk"]

binaries = []
prototk = ["dep:buffertk", "dep:prototk", "dep:prototk_derive"]

[dependencies]
biometrics = { path = "../biometrics", version = "0.9" }
buffertk = { path = "../buffertk", version = "0.9", optional = true }
prototk = { path = "../prototk", version = "0.9", optional = true }
prototk_derive = { path = "../prototk_derive", version = "0.9", optional = true }
tatl = { path = "../tatl", version = "0.8" }

[[example]]
name = "macros"
path = "examples/macros.rs"
required-features=["binaries"]
