[package]
name = "indicio"
version = "0.13.0"
authors = ["Robert Escriva <robert@rescrv.net>"]
edition = { workspace = true }
description = "Indicio provides a framework for emitting clues that may be used for debugging."
license = "Apache-2.0"
repository = "https://github.com/rescrv/blue"

[features]
default = ["binaries", "prototk"]

binaries = []
prototk = ["dep:buffertk", "dep:prototk", "dep:prototk_derive"]

[dependencies]
biometrics = { workspace = true }
buffertk = { workspace = true, optional = true }
prototk = { workspace = true, optional = true }
prototk_derive = { workspace = true, optional = true }
tatl = { workspace = true }

[[example]]
name = "macros"
path = "examples/macros.rs"
required-features=["binaries"]
