[package]
name = "k8src"
version = "0.16.0"
authors = ["Robert Escriva <robert@rescrv.net>"]
edition = { workspace = true }
description = "k8src is the kubernetes rc scripting language"
license = "Apache-2.0"
repository = "https://github.com/rescrv/blue"

[features]
default = ["binaries"]

binaries = ["command_line"]
command_line = ["dep:arrrg", "dep:arrrg_derive", "dep:getopts"]

[dependencies]
getopts = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"] }
serde_yaml = { workspace = true }
siphasher = { workspace = true }

arrrg = { workspace = true, optional = true }
arrrg_derive = { workspace = true, optional = true }
rc_conf = { workspace = true }
shvar = { workspace = true }
utf8path = { workspace = true }

[[bin]]
name = "k8src"
path = "src/bin/k8src.rs"
required-features=["binaries"]

[[example]]
name = "generate-tests"
path = "examples/generate-tests.rs"
required-features=["binaries"]

[[test]]
name = "specs"
path = "tests/specs.rs"
harness = false
