[package]
name = "keyvalint"
version = "0.1.0"
authors = ["Robert Escriva <robert@rescrv.net>"]
edition = "2021"
description = "keyvalint provides a KEY VALue INTerface"
license = "Apache-2.0"

[features]
default = ["reference"]

reference = []
rocksdb = ["dep:rocksdb"]

[dependencies]
rocksdb = { version = "0.21", optional = true }
