[package]
name = "keyvalint_bench"
version = "0.1.0"
authors = ["Robert Escriva <robert@rescrv.net>"]
edition = "2021"
description = "keyvalint_bench provides standardized key-value store benchmarks."
license = "Apache-2.0"

[features]
default = ["binaries"]

binaries = ["command_line"]
command_line = ["dep:arrrg", "dep:arrrg_derive", "dep:getopts"]

rocksdb = ["dep:rocksdb", "keyvalint/rocksdb"]

[dependencies]
getopts = { version = "0.2", optional = true }
rand = "0.7"

rocksdb = { version = "0.21", optional = true }

armnod = { path = "../armnod", version = "0.5" }
arrrg = { path = "../arrrg", version = "0.3", optional = true }
arrrg_derive = { path = "../arrrg_derive", version = "0.3", optional = true }
biometrics = { path = "../biometrics", version = "0.5" }
guacamole = { path = "../guacamole", version = "0.5" }
keyvalint = { path = "../keyvalint", version = "0.1" }
lsmtk = { path = "../lsmtk", version = "0.1" }
sst = { path = "../sst", version = "0.4" }
sync42 = { path = "../sync42", version = "0.5" }
utilz = { path = "../utilz", version = "0.3" }
zerror = { path = "../zerror", version = "0.2" }

[[bin]]
name = "keyvalint-bench-concurrent-log"
path = "src/bin/keyvalint-bench-concurrent-log.rs"
required-features=["binaries"]

[[bin]]
name = "keyvalint-bench-lsmtk"
path = "src/bin/keyvalint-bench-lsmtk.rs"
required-features=["binaries"]

[[bin]]
name = "keyvalint-bench-nop"
path = "src/bin/keyvalint-bench-nop.rs"
required-features=["binaries"]

[[bin]]
name = "keyvalint-bench-rocksdb"
path = "src/bin/keyvalint-bench-rocksdb.rs"
required-features=["binaries", "rocksdb"]
