[package]
name = "listfree"
version = "0.9.0"
authors = ["Robert Escriva <robert@rescrv.net>"]
edition = { workspace = true }
description = "listfree provides a lockfree prepend-only list"
license = "Apache-2.0"
repository = "https://github.com/rescrv/blue"

[dependencies]

[dev-dependencies]
guacamole = { workspace = true }
