[package]
name = "lp"
version = "0.1.0"
authors = ["Robert Escriva <robert@rescrv.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prototk = { path = "../prototk" }
prototk_derive = { path = "../prototk_derive" }
