[package]
name = "lp"
version = "0.1.0"
authors = ["Robert Escriva <robert@rescrv.net>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
crc32c = "0.6"
rand = "0.7"

armnod = { path = "../armnod" }
biometrics = { path = "../biometrics" }
buffertk = { path = "../buffertk" }
clue = { path = "../clue" }
guacamole = { path = "../guacamole" }
hey_listen = { path = "../hey_listen" }
prototk = { path = "../prototk" }
prototk_derive = { path = "../prototk_derive" }
setsum = { path = "../setsum" }
util = { path = "../util" }
zerror = { path = "../zerror" }
