[package]
name = "lp"
version = "0.1.0"
authors = ["Robert Escriva <robert@rescrv.net>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
crc32c = "0.6"
rand = "0.7"

armnod = { path = "../armnod", version = "0.2.0" }
biometrics = { path = "../biometrics", version = "0.1.1" }
buffertk = { path = "../buffertk", version = "0.2.0" }
guacamole = { path = "../guacamole", version = "0.2.0" }
indicio = { path = "../indicio" }
prototk = { path = "../prototk", version = "0.1.0" }
prototk_derive = { path = "../prototk_derive", version = "0.1.0" }
setsum = { path = "../setsum", version = "0.2.0" }
sst = { path = "../sst" }
tatl = { path = "../tatl" }
util = { path = "../util" }
zerror = { path = "../zerror", version = "0.1.0" }
zerror_core = { path = "../zerror_core", version = "0.1.0" }
